--- a/hobbies.css
+++ b/hobbies.css
@@ -130,3 +130,53 @@
   pointer-events: none; /* Makes the gradient non-interactive */
   opacity: 0;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  overflow: auto;
+}
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 60%;
+  height: auto;
+}
+
+.modal-content {
+  animation-name: slide-in;
+  animation-duration: 0.6s;
+}
+@keyframes slide-in {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.modal i {
+  position: absolute;
+  top: 15px;
+  left: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  transition: 0.3s;
+}
+
+.modal i:hover,
+.modal i:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
