--- a/hobbies.css
+++ b/hobbies.css
@@ -17,6 +17,7 @@
   height: 100%;
   object-fit: cover;
   object-position: center;
+  cursor: pointer;
 }
 .top-overlay {
   position: absolute;
@@ -152,7 +153,7 @@
 
 .modal-content {
   animation-name: slide-in;
-  animation-duration: 0.6s;
+  animation-duration: 1s;
 }
 @keyframes slide-in {
   from {
