--- a/hobbies.css
+++ b/hobbies.css
@@ -1,20 +1,43 @@
-/* body {
+body {
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-} */
+  padding: 0;
+  overflow-x: hidden;
+}
+.main-image {
+  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+}
 .image-container {
-  width: 30%;
+  width: 100%;
   height: auto;
   position: relative;
   overflow: hidden;
+  /* border: 2px solid black; */
+  /* margin: 30px; */
+  /* background-color: aqua; */
 }
-
+.origami-gallery-container {
+  width: 80%;
+  margin: 10%;
+  padding: 40px 0;
+}
+.origami-gallery {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 20px;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 .origami-image {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   object-position: center;
   cursor: pointer;
@@ -123,7 +146,7 @@
 .image-container::after {
   content: '';
   position: absolute;
-  bottom: 3px;
+  bottom: 0px;
   left: 0;
   right: 0;
   height: 10%; /* Adjust the height to only cover the gradient area */
@@ -135,7 +158,7 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   padding-top: 100px;
   left: 0;
   top: 0;
@@ -167,17 +190,17 @@
 }
 
 .modal i {
-  position: absolute;
+  position: fixed;
   top: 15px;
   left: 35px;
-  color: #f1f1f1;
+  color: white;
   font-size: 40px;
   transition: 0.3s;
 }
 
 .modal i:hover,
 .modal i:focus {
-  color: #bbb;
+  color: #d5d5d5;
   text-decoration: none;
   cursor: pointer;
 }
