--- a/hobbies.css
+++ b/hobbies.css
@@ -19,8 +19,10 @@ body {
 }
 .origami-gallery-container {
   width: 80%;
-  margin: 5% 8% 0% 12%;
+  margin: 5% 8% 10% 12%;
   padding: 40px 0;
+  height: 400vh;
+  overflow: hidden;
 }
 .origami-gallery {
   display: flex;
@@ -30,6 +32,7 @@ body {
 }
 .column {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
