--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,7 @@ body::-webkit-scrollbar-thumb {
 .navicon-container {
   position: fixed;
   right: 0;
+  top: 0;
   height: 40px;
   width: 40px;
   display: flex;
