--- a/hobbies.css
+++ b/hobbies.css
@@ -3,31 +3,30 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+.hobby-section {
+  display: flex;
+  flex-direction: column;
+}
 .main-image {
   width: 100vw;
-  max-width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   overflow: hidden;
 }
-.image-container {
-  width: 100%;
-  height: auto;
-  position: relative;
-  overflow: hidden;
-  /* margin-bottom: 40px; */
-  /* border: 2px solid black; */
-  /* margin: 30px; */
-  /* background-color: aqua; */
-}
-.origami-gallery-container {
+.origami-gallery {
   width: 80%;
   margin: 5% 8% 10% 12%;
   /* padding: 40px 0; */
   height: 1500px;
   overflow: hidden;
-  transition: all 0.5 ease-in-out;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 40px;
+  transition: height 0.5s ease-in-out;
 }
-.origami-gallery-container::after {
+.origami-gallery::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -45,12 +44,7 @@ body {
   );
   pointer-events: none;
 }
-.origami-gallery {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  gap: 40px;
-}
+
 .column {
   display: flex;
   flex: 1;
@@ -59,6 +53,7 @@ body {
   align-items: center;
   gap: 40px;
 }
+/* #region styles for origami-image */
 .origami-image {
   width: 100%;
   height: auto;
@@ -150,14 +145,17 @@ body {
 .icon-box:hover .icon-text {
   opacity: 1;
 }
-/* .icon-text {
-  background-color: brown;
-  color: white;
-  white-space: nowrap;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  font-size: 12px;
-} */
+
+.image-container {
+  width: 100%;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  /* margin-bottom: 40px; */
+  /* border: 2px solid black; */
+  /* margin: 30px; */
+  /* background-color: aqua; */
+}
 .image-container:hover .icon-box {
   opacity: 1;
 }
@@ -177,6 +175,48 @@ body {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
   pointer-events: none; /* Makes the gradient non-interactive */
   opacity: 0;
+}
+/* #endregion */
+
+.show-more-container {
+  text-align: right;
+  margin: 20px 10px 50px 10px;
+  position: static;
+  z-index: 1000;
+}
+/* .show-more-container {
+  text-align: right;
+  margin: 20px 0; 
+  position: static; 
+  width: 100%; 
+} */
+
+#toggleButton {
+  padding: 10px 20px;
+  background-color: #212429;
+  color: white;
+  font-size: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#toggleButton:hover {
+  background-color: #3d444f;
+  transform: scale(1.1);
+}
+
+#toggleButton i {
+  margin-right: 5px;
+}
+
+/* html {
+  scroll-behavior: smooth;
+} */
+
+.mainPlant-container {
+  z-index: 9;
 }
 
 .modal {
@@ -231,148 +271,4 @@ body {
   color: #d5d5d5;
   text-decoration: none;
   cursor: pointer;
-}
-
-.tag {
-  color: white;
-  position: fixed;
-  left: 75px;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 10px 20px;
-  font-size: 25px;
-  z-index: 100;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-a:hover {
-  color: rgb(0, 0, 0, 0.8);
-}
-.navbar {
-  height: 100vh;
-  width: 140px;
-  position: fixed;
-  right: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #212429;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-  z-index: 10;
-  padding-top: 100px;
-  overflow: hidden;
-  transition: transform 0.3s ease;
-  transform: translateX(140px);
-}
-.navbar.active {
-  transform: translateX(0px);
-}
-
-.navbar-nav {
-  width: 100%;
-  list-style: none;
-  padding: 10px;
-  margin: 0;
-}
-.navbar-link {
-  width: 100%;
-  padding: 15px 0;
-  text-align: left;
-  text-decoration: none;
-  color: white;
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  padding-left: 20px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-.navbar-link i {
-  font-size: 20px; /* Icon size */
-  display: block;
-  margin-bottom: 5px;
-  margin-right: 10px;
-}
-
-.navbar-link:hover {
-  background-color: #e9ecef;
-  color: #00bcd4;
-}
-
-.navbar-link.active {
-  background-color: #007bff;
-  color: #fff;
-}
-
-.navbar-link.active i {
-  color: #fff;
-}
-
-.navicon-container {
-  position: fixed;
-  right: 0;
-  height: 40px;
-  width: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #d7d7d7;
-  margin: 10px;
-  border-radius: 25%;
-  background-color: #212429;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Smooth transition for hover effects */
-  z-index: 11;
-}
-
-.navicon-container:hover {
-  /*   background-color: white;
-  color: black; */
-  transform: scale(1.1);
-}
-
-.show-more-container {
-  text-align: right;
-  margin: 20px 10px 50px 10px;
-  position: relative;
-}
-
-#toggleButton {
-  padding: 10px 20px;
-  background-color: #212429;
-  color: white;
-  font-size: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-#toggleButton:hover {
-  background-color: #3d444f;
-  transform: scale(1.1);
-}
-
-#toggleButton i {
-  margin-right: 5px;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.random {
-  height: 200vh;
-}
-.mainPlant-container {
-  position: relative;
-  z-index: 9;
-}
-.pin-wrapper {
-  position: relative;
-  z-index: 1;
 }
