--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 body {
   background-color: bisque;
-  font-family: 'Radiant';
+  font-family: 'Lato';
   margin: 0;
   transition: background-color 1s ease;
 }
@@ -41,12 +41,12 @@ body {
 }
 
 .socialBar i {
-  font-size: 20px; /* Adjusts the size of the icons */
+  font-size: 25px; /* Adjusts the size of the icons */
   color: #ffffff; /* Default color of the icons */
   background-color: #000000; /* Background color behind the icons */
-  width: 40px; /* Width of the circular background */
-  height: 40px; /* Height of the circular background */
-  line-height: 40px; /* Vertically centers the icon within the circle */
+  width: 50px; /* Width of the circular background */
+  height: 50px; /* Height of the circular background */
+  line-height: 50px; /* Vertically centers the icon within the circle */
   text-align: center; /* Horizontally centers the icon within the circle */
   border-radius: 50%; /* Makes the icons circular */
   transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Smooth transition for hover effects */
@@ -79,6 +79,7 @@ body {
   padding: 10px 20px;
   font-size: 25px;
   z-index: 100;
+  font-family: 'radiant';
 }
 
 a {
@@ -189,6 +190,7 @@ a:hover {
   column-gap: 20px;
   padding: 0;
   margin: 10px;
+  font-size: 18px;
 }
 
 .ability-list li {
@@ -253,7 +255,7 @@ body::-webkit-scrollbar-thumb {
 
 .navbar {
   height: 100vh;
-  width: 140px;
+  width: 160px;
   position: fixed;
   right: 0;
   top: 0;
@@ -266,7 +268,7 @@ body::-webkit-scrollbar-thumb {
   padding-top: 100px;
   overflow: hidden;
   transition: transform 0.3s ease;
-  transform: translateX(140px);
+  transform: translateX(160px);
 }
 .navbar.active {
   transform: translateX(0px);
@@ -286,13 +288,13 @@ body::-webkit-scrollbar-thumb {
   color: white;
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 16px;
   padding-left: 20px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 .navbar-link i {
-  font-size: 20px; /* Icon size */
+  font-size: 25px; /* Icon size */
   display: block;
   margin-bottom: 5px;
   margin-right: 10px;
@@ -334,6 +336,9 @@ body::-webkit-scrollbar-thumb {
   /*   background-color: white;
   color: black; */
   transform: scale(1.1);
+}
+.navbar-icon{
+  font-size: 20px;
 }
 
 .feedback {
